--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,7 @@
         Theme by
         <a href="https://beautifuljekyll.com">beautiful-jekyll</a>
       </p>
+      <p class="theme-by text-muted">Made with <i class="fa fa-heart" aria-hidden="true"></i>  in Indiana</p>
       </div>
     </div>
   </div>
