--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,9 @@
           {% include {{ page.footer-extra }} %}
         </div>
       {% endif %}
+        
       <p class="copyright text-muted">
-      {% if site.author %}
+      &copy;{% if site.author %}
         {{ site.author }}
         &nbsp;&bull;&nbsp;
       {% endif %}
