--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,7 +128,7 @@ img {
 .navbar-custom {
   background-color: {{ site.navbar-col | default: "#F5F5F5" }};
   border-bottom: 1px solid {{ site.navbar-border-col | default: "#EAEAEA" }};
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue',Helvetica, Arial, sans-serif;
   {% if site.navbar-img %}
     background-image: url({{ site.navbar-img | relative_url }});
     background-attachment: fixed;
@@ -378,7 +378,10 @@ img {
 }
 @media only screen and (min-width: 768px) {
   .nav-search-link .nav-search-icon {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
     display: inline;
+    font-family: 'Open Sans', 'Helvetica Neue',Helvetica, Arial, sans-serif;
   }
   .nav-search-link .nav-search-text {
     display: none;
