--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -378,7 +378,8 @@ img {
 }
 @media only screen and (min-width: 768px) {
   .nav-search-link .nav-search-icon {
-    text-transform: uppercase;
+    display: none;
+/*     text-transform: uppercase;
     font-size: 0.75rem;
     letter-spacing: 0.0625rem;
     padding-top: 0;
@@ -387,10 +388,10 @@ img {
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-weight: 800;
-    color: {{ site.navbar-text-col | default: "#404040" }};
+    color: {{ site.navbar-text-col | default: "#404040" }}; */
   }
   .nav-search-link .nav-search-text {
-    display: none;
+    display: inline;
   }
 }
 
