--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -32,7 +32,7 @@
       {%- endfor -%}
     
      {% if site.nav-search %}
-		  <li>
+		  <li class="nav-item">
 		  <a href="{{ site.baseurl }}/{{ site.nav-search }}" class="nav-search-link" title="Search">
 		    <span class="fa fa-search nav-search-icon"></span>
 			<span class="nav-search-text">Search</span>
