--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@ layout: null
 
 /* --- General --- */
 
-html {
+html{
   font-size: 100%
 }
 
@@ -370,7 +370,20 @@ img {
   }
 }
 
-
+.navbar-custom .nav-item .nav-search-link .nav-search-icon {
+  display: none;
+}
+.navbar-custom .nav-item .nav-search-link .nav-search-text {
+  display: inline;
+}
+@media only screen and (min-width: 768px) {
+  .navbar-custom .nav-item .nav-search-link .nav-search-icon {
+    display: inline;
+  }
+  .navbar-custom .nav-item .nav-search-link .nav-search-text {
+    display: none;
+  }
+}
 
 
 /* --- Footer --- */
