--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -370,18 +370,18 @@ img {
   }
 }
 
-.navbar-custom .nav-item .nav-search-link .nav-search-icon {
+.navbar-custom .nav-link .nav-search-link .nav-search-icon {
   display: none;
 }
-.navbar-custom .nav-item .nav-search-link .nav-search-text {
+.navbar-custom .nav-link .nav-search-link .nav-search-text {
   display: inline;
 }
 @media only screen and (min-width: 768px) {
-  .navbar-custom .nav-item .nav-search-link .nav-search-icon {
-    display: none;
-  }
-  .navbar-custom .nav-item .nav-search-link .nav-search-text {
+  .navbar-custom .nav-link .nav-search-link .nav-search-icon {
     display: inline;
+  }
+  .navbar-custom .nav-link .nav-search-link .nav-search-text {
+    display: none;
   }
 }
 
