--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -370,6 +370,31 @@ img {
   }
 }
 
+nav-link.nav-search-link;
+nav-link.nav-search-text;
+.nav-search-link .nav-search-icon {
+  display: none;
+}
+.nav-search-link .nav-search-text {
+  display: inline;
+}
+@media only screen and (min-width: 768px) {
+  .nav-search-link .nav-search-icon {
+    display: inline;
+  }
+  .nav-search-link .nav-search-text {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .navbar-custom .nav li a {
+    padding-left: 10px;
+	padding-right: 10px;
+	font-size: 12px;
+  }
+}
+
 /* --- Footer --- */
 
 footer {
