--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,10 +33,14 @@
       
     {% if site.nav-search %}
     <li class="nav-item">
-		  <a href="{{ site.baseurl }}/{{ site.nav-search }}" class="nav-search-link" title="Search">
-		    <span class="fa fa-search nav-search-icon"></span>
-			  <span class="nav-search-text">Search</span>
-		  </a>
+	    <a href="{{ site.baseurl }}/{{ site.nav-search }}" title="Search">
+		    <span class="nav-link"><i class="fa fa-search" aria-hidden="true"></i></span>
+			  <span class="nav-link">Search</span>
+	    </a>
+<!-- 		  <a href="{{ site.baseurl }}/{{ site.nav-search }}" class="nav-search-link" title="Search">
+		    <span class="fa fa-search nav-link nav-search-icon"></span>
+			  <span class="nav-link nav-search-text">Search</span>
+		  </a> -->
 		</li>
 		{% endif %}
       
