--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -370,24 +370,15 @@ img {
   }
 }
 
-.nav-search-link .nav-search-icon {
+.navbar-custom .navbar-nav .nav-link .nav-search-icon {
   display: none;
 }
-.nav-search-link .nav-search-text {
+.navbar-custom .navbar-nav .nav-link .nav-search-text {
   display: inline;
-  line-height: 1.5;
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-  font-size: 1.125rem;
-  
 }
 @media only screen and (min-width: 768px) {
   .nav-search-link .nav-search-icon {
     display: inline;
-    line-height: 1.5;
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-  font-size: 1.125rem;
   }
   .nav-search-link .nav-search-text {
     display: none;
