--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -370,17 +370,17 @@ img {
   }
 }
 
-.navbar-custom .navbar-nav .nav-link .nav-search-icon {
+.nav-search-icon {
   display: none;
 }
-.navbar-custom .navbar-nav .nav-link .nav-search-text {
+.nav-search-text {
   display: inline;
 }
 @media only screen and (min-width: 768px) {
-  .nav-search-link .nav-search-icon {
+  .nav-search-icon {
     display: inline;
   }
-  .nav-search-link .nav-search-text {
+  .nav-search-text {
     display: none;
   }
 }
