--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,7 +33,7 @@
       
     {% if site.nav-search %}
     <li class="nav-item">
-	    <a href="{{ site.baseurl }}/{{ site.nav-search }}" class="nav-link" title="Search">
+	    <a href="{{ site.baseurl }}/{{ site.nav-search }}" class="nav-link nav-search-link" title="Search">
 		    <span class="nav-search-icon"><i class="fa fa-search" aria-hidden="false"></i></span>
 			  <span class="nav-search-text">Search</span>
 	    </a>
