--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container-md beautiful-jekyll-footer">
     <div class="clustrmap" align='left';>
-    <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=9gj1YqE7zXmga0qvnFoV8PUEbK2PBZZAhQbA_pGbPs4"></script>
+    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5n2nadt1fff&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
     </div>  
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
