--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container-md beautiful-jekyll-footer">
-    <div class="clustrmap" align='left';>
+    <div class="revolvermap" align='left';>
     <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
     </div>  
     <div class="row">
