--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -407,8 +407,13 @@ footer a {
   color: {{ site.footer-link-col | default: "#404040" }};
 }
 
+footer .revolvermap{
+  margin-right: 1rem;
+}
+  
 footer .list-inline {
-  margin: 0;
+/*   margin: 0; */
+  margin-top: 1rem;
   padding: 0;
   margin-bottom: 1.875rem;
 }
