--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,9 @@
 <footer>
   <div class="container-md beautiful-jekyll-footer">
 <!--     <div class="revolvermap" align='left';> -->
-    <div class="col-xl-8 col-lg-10">
+    <div class="col-md-5">
     <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
     </div>  
-    <p>
-    <
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
       {% include social-networks-links.html %}
