--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,13 @@
+<!-- <div class="col-sm-5" align ="left"; >
+      <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
+      </div> -->
 <footer>
   <div class="container-md beautiful-jekyll-footer">
 <!--     <div class="revolvermap" align='left';> -->
     <div class="row">
-      <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1"> 
-      {% include social-networks-links.html %}
-<!--        <div class="col-sm-5" align ="left"; > -->
-      <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
-<!--       </div>  -->
+<!--       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">  -->
+      <div class="col-xl-8 col-lg-10 ">
+      {% include social-networks-links.html %} 
       {% if page.footer-extra %}
         <div class="footer-custom-content">
           {% include {{ page.footer-extra }} %}
