--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,7 @@
 <!--     <div class="revolvermap" align='left';> -->
     <div class="row">
 <!--       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">  -->
-      <div class="col-xl-4 col-lg-10 " align="center";>
-            <div style="max-width: 341px; max-height: 341px; margin: 0px auto;">
+      <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
                   <div style="position: relative; padding-top: 100%;">
                         <iframe style="background: transparent !important; position: absolute; left: 0px; top: 0px;" scrolling="no" frameborder="0" allowtransparency="true" width="100%" height="100%" src="//rf.revolvermaps.com/w/8/a/a2.php?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33">
                         </iframe>
