--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -1,4 +1,4 @@
-<ul class="list-inline text-center footer-links">
+<ul class="list-inline text-left footer-links">
 
 {%- if site.social-network-links.rss -%}
   <li class="list-inline-item">
