--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,10 +7,11 @@
     <div class="row">
 <!--       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">  -->
       <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
-                  <div style="position: relative; padding-top: 100%;">
+            <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5usl9qeflix&amp;m=2&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
+<!--                   <div style="position: relative; padding-top: 100%;">
                         <iframe style="background: transparent !important; position: absolute; left: 0px; top: 0px;" scrolling="no" frameborder="0" allowtransparency="true" width="100%" height="100%" src="//rf.revolvermaps.com/w/8/a/a2.php?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33">
                         </iframe>
-                  </div>
+                  </div> -->
        </div>
 <!--       <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script> -->
       <div class="col-xl-8 col-lg-10 ">
