--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -413,6 +413,42 @@ footer .revolvermap{
   
 footer .list-inline {
 /*   margin: 0; */
+  text-align: center;
+  margin-top: 1rem;
+  padding: 0;
+  margin-bottom: 1.875rem;
+}
+footer .copyright {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  text-align: center;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+footer .theme-by {
+  text-align: center;
+  margin: 0.625rem 0 0;
+}
+footer .footer-custom-content {
+  text-align: center;
+  margin-bottom: 0.9375rem;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+@media (min-width: 768px) {
+  footer {
+    padding: 3.125rem 0;
+  }
+  footer .footer-links {
+    font-size: 1.125rem;
+  }
+  footer .copyright {
+    font-size: 1rem;
+  }
+  footer .footer-custom-content {
+    font-size: 1rem;
+  }
+  footer .list-inline {
+/*   margin: 0; */
   text-align: left;
   margin-top: 1rem;
   padding: 0;
@@ -436,20 +472,6 @@ footer .footer-custom-content {
   margin-bottom: 0.9375rem;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-
-@media (min-width: 768px) {
-  footer {
-    padding: 3.125rem 0;
-  }
-  footer .footer-links {
-    font-size: 1.125rem;
-  }
-  footer .copyright {
-    font-size: 1rem;
-  }
-  footer .footer-custom-content {
-    font-size: 1rem;
-  }
 }
 
 /* --- Post preview --- */
