--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,8 @@
     <a class="navbar-brand" href="{{ '' | absolute_url }}">{{ site.title }}</a>
   {%- endif -%}
 
+<script id="_wauzcc">var _wau = _wau || []; _wau.push(["classic", "z70jqs370t", "zcc"]);</script><script async src="//waust.at/c.js"></script>
+	
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
