--- a/_includes/youtube-embed.html
+++ b/_includes/youtube-embed.html
@@ -1,1 +1,3 @@
-<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/{{ include.id }}" frameborder="0" allowfullscreen></iframe>
+<div class="youtube-container">
+<iframe src="https://www.youtube.com/embed/{{ include.id }}" allowfullscreen></iframe>
+</div>
