Added youtube container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -475,6 +475,29 @@ footer .footer-custom-content {
 }
 }
 
+/* --- YouTube --- */
+.youtube-container {
+  overflow: hidden;
+  // Calculated from the aspect ration of the content (in case of 16:9 it is 9/16= 0.5625)
+  padding-top: 56.25%;
+  position: relative;
+}
+ 
+.youtube-container iframe {
+   border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
+}
+
+/* @media (min-width: 768px) {
+.youtube {
+  width=560px ;
+  height=315px ;
+}  
+} */
 /* --- Post preview --- */
 
 .post-preview {
