--- a/_includes/youtube-embed.html
+++ b/_includes/youtube-embed.html
@@ -1,3 +1,3 @@
 <!-- <div class="youtube-container"> -->
-<iframe src="https://www.youtube.com/embed/{{ include.id }}" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+<iframe class="youtube-container" src="https://www.youtube.com/embed/{{ include.id }}" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 <!-- </div> -->
