--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -476,18 +476,20 @@ footer .footer-custom-content {
 }
 
 /* --- YouTube --- */
-.youtube-container {
+/* .youtube-container {
   overflow: hidden;
   // Calculated from the aspect ration of the content (in case of 16:9 it is 9/16= 0.5625)
   padding-top: 56.25%;
   position: relative;
-}
+} */
  
-.youtube-container iframe {
+.youtube-container {
    border: 0;
    height: 100%;
    left: 0;
-   position: absolute;
+  overflow: hidden;
+  padding-top: 56.25%;
+   position: relative;
    top: 0;
    width: 100%;
 }
