--- a/_includes/youtube-embed.html
+++ b/_includes/youtube-embed.html
@@ -1,2 +1,2 @@
-<iframe class="youtube-container" src="https://www.youtube.com/embed/{{ include.id }}" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+<iframe class="youtube-container" src="https://www.youtube.com/embed/{{ include.id }}" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" marginwidth="0;" allowfullscreen></iframe>
 
