--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -388,10 +388,14 @@ img {
 /* --- Footer --- */
 
 footer {
-  padding: 1.875rem 0;
+  padding: 30px 0 70px;
   border-top: 1px #EAEAEA solid;
-  margin-top: 3.125rem;
-  font-size: 0.875rem;
+  margin-top: 35px;
+  font-size: 14px;
+/*   padding: 1.875rem 0; */
+/*   border-top: 1px #EAEAEA solid; */
+/*   margin-top: 3.125rem; */
+/*   font-size: 0.875rem; */
   background-color: {{ site.footer-col | default: "#F5F5F5" }};
   {% if site.footer-img %}
     background-image: url({{ site.footer-img | relative_url }});
