--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,10 +16,10 @@
 <!--       <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script> -->
       <div class="col-xl-4 col-lg-10 ">
       {% include social-networks-links.html %} 
-      {% if page.footer-extra %}
+<!--       {% if page.footer-extra %}
         <div class="footer-custom-content">
           {% include {{ page.footer-extra }} %}
-        </div>
+        </div> -->
       </div>
       <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
       <script>
