--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,7 @@
         </div> -->
       </div>
       <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
+            <p> Hello </p>
       <script>
       // Initialize and add the map
       function initMap() {
