--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,42 +3,40 @@
       </div> -->
 <footer>
   <div class="container-md beautiful-jekyll-footer">
-<!--     <div class="revolvermap" align='left';> -->
+
     <div class="row">
-<!--       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">  -->
-      <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
+<!-- Revolver Maps -->
+<!--        <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
             <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5usl9qeflix&amp;m=2&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
-<!--                   <div style="position: relative; padding-top: 100%;">
-                        <iframe style="background: transparent !important; position: absolute; left: 0px; top: 0px;" scrolling="no" frameborder="0" allowtransparency="true" width="100%" height="100%" src="//rf.revolvermaps.com/w/8/a/a2.php?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33">
-                        </iframe>
-                  </div> -->
        </div>
-<!--       <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5jemg9x4z6e&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script> -->
-      <div class="col-xl-4 col-lg-10 ">
-      {% include social-networks-links.html %} 
+ -->
+<!--       <div class="col-xl-4 col-lg-10 "> -->
+<!--       {% include social-networks-links.html %}  -->
 <!--       {% if page.footer-extra %}
         <div class="footer-custom-content">
           {% include {{ page.footer-extra }} %}
         </div> -->
-      </div>
+<!--       </div> -->
       <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
-            <p> Hello </p>
+            
       <script>
       // Initialize and add the map
-      function initMap() {
-        // The location of Uluru
-        var uluru = {lat: 39.170474, lng: -86.492144};
-        // The map, centered at Uluru
-        var map = new google.maps.Map(
+            function initMap() {
+            // The location of Uluru
+            var uluru = {lat: 39.170474, lng: -86.492144};
+            // The map, centered at Uluru
+            var map = new google.maps.Map(
             document.getElementById('map'), {zoom: 4, center: uluru});
-        // The marker, positioned at Uluru
-        var marker = new google.maps.Marker({position: uluru, map: map});
+            // The marker, positioned at Uluru
+            var marker = new google.maps.Marker({position: uluru, map: map});
       }
-          </script>
-          <script async defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH5UmWp09meWnoI1L9mDoV0Wpapfy2d-A&callback=initMap">
-          </script>            
+      </script>
+            
+            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH5UmWp09meWnoI1L9mDoV0Wpapfy2d-A&callback=initMap">
+            </script>  
+            
       </div>
+          
       {% endif %}
         
       <p class="copyright text-muted">
