--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,9 @@
   <div class="container-md beautiful-jekyll-footer">
 
     <div class="row">
-<!-- Revolver Maps -->
-<!--        <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
+      <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
             <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5usl9qeflix&amp;m=2&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
        </div>
- -->
 <!--       <div class="col-xl-4 col-lg-10 "> -->
 <!--       {% include social-networks-links.html %}  -->
 <!--       {% if page.footer-extra %}
