--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,16 +7,16 @@
     <div class="row">
       <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
             <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5usl9qeflix&amp;m=2&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
-       </div>
-<!--       <div class="col-xl-4 col-lg-10 "> -->
-<!--       {% include social-networks-links.html %}  -->
-<!--       {% if page.footer-extra %}
+      </div>
+          
+      <div class="col-xl-8 col-lg-10 "> -->
+      {% include social-networks-links.html %} 
+      {% if page.footer-extra %}
         <div class="footer-custom-content">
           {% include {{ page.footer-extra }} %}
-        </div> -->
-<!--       </div> -->
-      <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">
-            
+        </div>
+
+<!--       <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">             -->
       <script>
       // Initialize and add the map
             function initMap() {
@@ -30,10 +30,10 @@
       }
       </script>
             
-            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH5UmWp09meWnoI1L9mDoV0Wpapfy2d-A&callback=initMap">
-            </script>  
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH5UmWp09meWnoI1L9mDoV0Wpapfy2d-A&callback=initMap">
+      </script>  
             
-      </div>
+<!--       </div> -->
           
       {% endif %}
         
