--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,19 +10,13 @@
             <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5usl9qeflix&amp;m=2&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
       </div>
           
-      <div class="col-xl-4 col-lg-10 "> -->
+      <div class="col-xl-4 col-lg-10 "> 
       {% include social-networks-links.html %} 
 <!--       {% if page.footer-extra %}
         <div class="footer-custom-content">
           {% include {{ page.footer-extra }} %}
-        </div> -->
-      
-      <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">            
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3093.1966710607308!2d-86.49432148468244!3d39.17024947952945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886c641bccba1635%3A0xabddc8455eb66876!2s3315%20John%20Hinkle%20Pl%2C%20Bloomington%2C%20IN%2047408!5e0!3m2!1sen!2sus!4v1589995297420!5m2!1sen!2sus" frameborder="0" style="border:0;style="max-width: 341px; max-height: 341px; margin: 0px auto;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      </div>
-
-          
-      {% endif %}
+         </div> 
+       {% endif %}  -->
         
       <p class="copyright text-muted">
       &copy;{% if site.author %}
@@ -50,6 +44,11 @@
       </p>
       <p class="theme-by text-muted">Made with <i class="fa fa-heart" aria-hidden="true"></i>  in Indiana</p>
       </div>
+     
+      <div class="col-xl-4 col-lg-10 " style="max-width: 341px; max-height: 341px; margin: 0px auto;">            
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3093.1966710607308!2d-86.49432148468244!3d39.17024947952945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886c641bccba1635%3A0xabddc8455eb66876!2s3315%20John%20Hinkle%20Pl%2C%20Bloomington%2C%20IN%2047408!5e0!3m2!1sen!2sus!4v1589995297420!5m2!1sen!2sus" frameborder="0" style="border:0;style="max-width: 341px; max-height: 341px; margin: 0px auto;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+      
     </div>
   </div>
 </footer>
