Made text center in ul

--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -1,5 +1,5 @@
-<!-- <ul class="list-inline text-left footer-links"> -->
-<ul class="list-inline footer-links">
+<ul class="list-inline text-center footer-links">
+<!-- <ul class="list-inline footer-links"> -->
 {%- if site.social-network-links.rss -%}
   <li class="list-inline-item">
     <a href="{{ '/feed.xml' | relative_url }}" title="RSS">
