Remove text-center from p tags

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
          </div> 
        {% endif %}  -->
         
-      <p class="copyright text-muted text-center">
+      <p class="copyright text-muted">
       &copy;{% if site.author %}
         {{ site.author }}
         &nbsp;&bull;&nbsp;
@@ -38,11 +38,11 @@
       {% endif%}
       </p>
       <!-- Please don't remove this, keep my open source work credited :) -->
-      <p class="theme-by text-muted text-center">
+      <p class="theme-by text-muted">
         Theme by
         <a href="https://beautifuljekyll.com">beautiful-jekyll</a>
       </p>
-      <p class="theme-by text-muted text-center">Made with <i class="fa fa-heart" aria-hidden="true"></i>  in Indiana</p>
+      <p class="theme-by text-muted">Made with <i class="fa fa-heart" aria-hidden="true"></i>  in Indiana</p>
       </div>
      
       <div class="col-xl-4 col-lg-10">            
