--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -479,9 +479,9 @@ footer .footer-custom-content {
 }
 }
 /* --- Google Maps --- */
-.map-container iframe{
+footer .map-container iframe{
+  width: 300px;
   height: 200px;
-  width: 150px;
   max-width: 500px; 
   max-height: 500px; 
   margin: 0px auto;
@@ -490,9 +490,9 @@ footer .footer-custom-content {
 }
 
 @media (min-width: 768px) {
-.map-container iframe{
-  height: 350px;
-  width: 250px;
+footer .map-container iframe{
+  width: 600px;
+  height: 400px;
   max-width: 500px; 
   max-height: 500px; 
   margin: 0px auto;
