--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -481,6 +481,7 @@ footer .footer-custom-content {
 }
 /* --- Google Maps --- */
 footer .map-container iframe{
+  padding-top: 20px;
   width: 300px;
   height: 200px;
   max-width: 500px; 
