--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -418,23 +418,27 @@ footer .revolvermap{
 footer .list-inline {
 /*   margin: 0; */
   text-align: center;
-  margin-top: 1rem;
+/*   margin-top: 1rem; */
   padding: 0;
-  margin-bottom: 1.875rem;
+/*   margin-bottom: 1.875rem; */
+  margin:auto;
 }
 footer .copyright {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   text-align: center;
-  margin-bottom: 0;
-  margin-top: 0;
+/*   margin-bottom: 0; */
+/*   margin-top: 0; */
+  margin:auto;
 }
 footer .theme-by {
   text-align: center;
-  margin: 0.625rem 0 0;
+/*   margin: 0.625rem 0 0; */
+  margin:auto;
 }
 footer .footer-custom-content {
   text-align: center;
-  margin-bottom: 0.9375rem;
+/*   margin-bottom: 0.9375rem; */
+  margin:auto;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -479,6 +483,7 @@ footer .footer-custom-content {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 }
+
 /* --- Google Maps --- */
 footer .map-container iframe{
   padding-top: 20px;
@@ -493,16 +498,28 @@ footer .map-container iframe{
   display: block;
 }
 
-/* @media (min-width: 768px) { */
-@media (min-width: 1200px) {
+@media (min-width: 768px){
 footer .map-container iframe{
-  width: 600px;
-  height: 400px;
+  padding-top: 20px;
+  width: 500px;
+  height: 333px;
   max-width: 500px; 
   max-height: 500px; 
   margin: 0px auto;
   overflow: auto;
   resize: both;
+  align: center;
+  display: block;
+}
+
+@media (min-width: 1200px) {
+footer .map-container iframe{
+  width: 600px;
+  height: 400px;
+  margin: 0px auto;
+  overflow: auto;
+  resize: both;
+}
 }
 }
 
