--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
         {{ site.author }}
         &nbsp;&bull;&nbsp;
       {% endif %}
-      {{ site.time | date: '%Y' }}
+      {{ site.time | date: '%m %Y' }}
 
       {% if site.url-pretty %}
         &nbsp;&bull;&nbsp;
