--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,6 +136,7 @@ img {
   -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
   -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
   transition: background .5s ease-in-out,padding .5s ease-in-out;
+  color: {{ site.navbar-text-col | default: "#404040" }};
 }
 
 .navbar-custom,
@@ -190,6 +191,7 @@ img {
   text-transform: uppercase;
   font-size: 0.75rem;
   letter-spacing: 0.0625rem;
+  color: {{ site.navbar-text-col | default: "#404040" }};
 }
 
 .navbar-custom .navbar-nav .nav-link {
@@ -198,6 +200,7 @@ img {
   line-height: 1.5;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  color: {{ site.navbar-text-col | default: "#404040" }};
 }
 
 .navbar-custom .navbar-brand,
@@ -241,10 +244,12 @@ img {
   .navbar-expand-md .navbar-nav .nav-link {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
+    color: {{ site.navbar-text-col | default: "#404040" }};
   }
 
   .navbar-expand-md .navbar-nav .nav-item:not(.dropdown):last-child .nav-link {
     padding-right: 0;
+    color: {{ site.navbar-text-col | default: "#404040" }};
   }
 }
 
@@ -274,6 +279,7 @@ img {
   text-decoration: none !important;
   border-width: 0 1px 1px 1px;
   font-weight: normal;
+  color: {{ site.navbar-text-col | default: "#404040" }};
 }
 
 @media (min-width: 1200px) {
@@ -283,14 +289,14 @@ img {
 
   .navbar-custom .nav-item.dropdown .dropdown-menu .dropdown-item {
     padding-left: 0.625rem;
-    border: 1px solid {{ site.navbar-border-col | default: "#EAEAEA" }};
+    border: 1px solid {{ site.navbar-col | default: "#404040" }};
     border-width: 0 1px 1px;
   }
 }
 
 @media (max-width: 1199px) {
   .navbar-custom .navbar-collapse {
-    border-top: 1px solid {{ site.navbar-border-col | default: "#EAEAEA" }};
+    border-top: 1px solid {{ site.navbar-col | default: "#404040" }};
     margin: 0 -1rem;
   }
 
