--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -284,7 +284,7 @@ img {
 
 .navbar-custom .nav-item.dropdown .dropdown-menu .dropdown-item:hover,
 .navbar-custom .nav-item.dropdown .dropdown-menu .dropdown-item:focus {
-  color: {{ site.navbar-text-col | default: "#404040" }};
+  color: {{ site.hover-col | default: "#0085A1" }};
 }
 
 @media (min-width: 1200px) {
