--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,7 +47,7 @@
      
       <div class="col-xl-4 col-lg-10" style="margin: 0px auto;">            
             <div class="map-container">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729.9334746658405!2d-86.52749921909299!3d39.16676010720018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886c66c2426c95bf%3A0xe4f2c09b1d829cf0!2sSample%20Gates!5e0!3m2!1sen!2sus!4v1590024884663!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7487.7760162770455!2d-86.517299169625!3d39.17525927065056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886c66c26789ad33%3A0x3499a08bb315d436!2sIndiana%20University%20Bloomington!5e1!3m2!1sen!2sus!4v1590290634511!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
       </div>
       
