--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -399,10 +399,15 @@ img {
 /* --- Footer --- */
 
 footer {
-  padding: 30px 0 70px;
+  padding: 30px 0;
+  /* background: #F5F5F5; */
+  /* border-top: 1px #EAEAEA solid; */
+  margin-top: 50px;
+  font-size: 14px;
+  /* padding: 30px 0 70px;
   border-top: 1px #EAEAEA solid;
   margin-top: 35px;
-  font-size: 14px;
+  font-size: 14px; */
 /*   padding: 1.875rem 0; */
 /*   border-top: 1px #EAEAEA solid; */
 /*   margin-top: 3.125rem; */
