Extended footer to the bottom
https://stackoverflow.com/questions/9741701/how-can-i-extend-a-footer-to-bottom-of-page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -412,6 +412,10 @@ footer {
 /*   border-top: 1px #EAEAEA solid; */
 /*   margin-top: 3.125rem; */
 /*   font-size: 0.875rem; */
+
+/* This is hardcoding the footer bottom to the end of the page */
+/* https://stackoverflow.com/questions/9741701/how-can-i-extend-a-footer-to-bottom-of-page */
+  box-shadow: 0 50vh 0 50vh #404040;/* #000;*/
   background-color: {{ site.footer-col | default: "#F5F5F5" }};
   {% if site.footer-img %}
     background-image: url({{ site.footer-img | relative_url }});
